[gd_scene load_steps=7 format=2]

[ext_resource path="res://UsedAssets/ui_icons/suit_hearts.png" type="Texture" id=1]
[ext_resource path="res://UIElements/ObjectLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://UsedAssets/ui_icons/timer_0.png" type="Texture" id=3]
[ext_resource path="res://UsedAssets/ui_icons/crop_carrot.png" type="Texture" id=4]
[ext_resource path="res://UsedAssets/new_theme.tres" type="Theme" id=5]
[ext_resource path="res://GameWorld/PlantSpot/PlantGui.gd" type="Script" id=6]

[node name="PlantGui" type="ColorRect"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 104, 160 )
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 0.247059 )
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 4.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0, 0, 0, 0.52549 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 156.0
rect_min_size = Vector2( 96, 96 )
custom_constants/separation = 4

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 20.0
margin_right = 76.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StatusIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 6
expand = true
stretch_mode = 6

[node name="EmptySpace" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 40.0
margin_top = 60.0
margin_right = 56.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 6
expand = true
stretch_mode = 6

[node name="ObjectLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 96.0
margin_bottom = 112.0
rect_min_size = Vector2( 96, 32 )

[node name="SizeBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
visible = false
margin_left = 70.0
margin_top = 137.0
margin_right = 126.0
margin_bottom = 151.0
rect_min_size = Vector2( 56, 14 )
size_flags_vertical = 4
percent_visible = false

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 96.0
margin_bottom = 152.0

[node name="CropIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 40.0
margin_right = 96.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 56.0
margin_bottom = 16.0
size_flags_horizontal = 4

[node name="HeartIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 56.0
margin_bottom = 15.0
rect_min_size = Vector2( 36, 14 )
size_flags_vertical = 4
value = 50.0
percent_visible = false

[node name="GrowthIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 20.0
margin_right = 56.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
